After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751510 - gst-library-error-quark: Failed to encode frame when rendering to webm
gst-library-error-quark: Failed to encode frame when rendering to webm
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other Linux
: High blocker
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-25 17:42 UTC by sam tygier
Modified: 2015-08-16 13:36 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description sam tygier 2015-06-25 17:42:44 UTC
Using the bundle 20150625-050357-pitivi-latest-x86_64

Added a single video file (ISO MP4/M4A, H.264, MPEG-4AAC (from a sony action cam)) to the timeline. Clicked render, selected WEBM. Progress bar gets close to end, and I get the message:
Sorry, something didn’t work right.
An error occured while trying to render your project. You might want to check our troubleshooting guide or file a bug report. The GStreamer error was:
gst-library-error-quark: Failed to encode frame (6)

In stderr I get
(pitivi:15956): GStreamer-CRITICAL **: gst_mini_object_unref: assertion 'mini_object->refcount > 0' failed
ERROR 18:32:41 pipeline          pitivi+utils+pipeline+pipeline0 _handleErrorMessage: error from <__main__.GstVP8Enc object at 0x7f86ac1c2280 (GstVP8Enc at 0x31236d0)>: gst-library-error-quark: Failed to encode frame (6) (gstvp8enc.c(2035): gst_vp8_enc_handle_frame (): /pitivi+utils+pipeline+Pipeline:pitivi+utils+pipeline+pipeline0/GstEncodeBin:internal-encodebin/GstVP8Enc:vp8enc0:
invalid parameter) (usr/lib/pitivi/python/pitivi/utils/pipeline.py:555)

Source file is ~25MB, could upload somewhere if needed.
Comment 1 Thibault Saunier 2015-06-26 07:45:41 UTC
Could you please provide us with your project and the media files (using 'export as archive' in the main menu) and put as described on http://wiki.pitivi.org/wiki/Bug_reporting#Providing_debugging_information or anywhere you want.

Thanks.
Comment 2 sam tygier 2015-06-26 10:59:42 UTC
uploaded bug_751510.xges_tar to the ftp
Comment 3 Jean-François Fortin Tam 2015-07-01 18:45:43 UTC
I'm seeing this too, with my own project.
Comment 4 Thibault Saunier 2015-07-02 08:19:57 UTC
commit 938aaaef249095d5c982027b04837ed2421040bd
Author: Thibault Saunier <tsaunier@gnome.org>
Date:   Wed Jul 1 17:28:52 2015 +0200

    ges: Do not add a final gap at the end of track while rendering
    
    It is not correct to force a black frame at the end of the rendered
    video and it also leads to rendering issue with vpX encoders.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=751510
Comment 5 sam tygier 2015-07-05 15:20:35 UTC
Confirm that newly created projects are fixed with 20150705-031931-pitivi-latest-x86_64.

However if I try to render an existing project I still get the error. Not really a big issue for me as I did not have anything to complicated to remake.
Comment 6 Thibault Saunier 2015-07-05 15:53:44 UTC
@sam, Could you share such project so I can have a look? It should be fixed for all projects.
Comment 7 sam tygier 2015-07-05 17:17:08 UTC
Actually maybe I am seeing a different error on that existing project. I'll have a play round and try to figure out simple project that reproduces it.

ERROR 18:10:54 pipeline          pitivi+utils+pipeline+pipeline1 _handleErrorMessage: error from <__main__.GstAviDemux object at 0x7f009800c5a0 (GstAviDemux at 0x7f0078051000)>: gst-stream-error-quark: Internal data stream error. (1) (gstavidemux.c(5673): gst_avi_demux_loop (): /pitivi+utils+pipeline+Pipeline:pitivi+utils+pipeline+pipeline1/GESTimeline:gestimeline1/GESVideoTrack:gesvideotrack1/NleComposition:(video)nlecomposition2/GstBin:current-bin/NleSource:nlesource14/GstBin:videosrcbin/GstURIDecodeBin:uridecodebin3/GstDecodeBin:decodebin14/GstAviDemux:avidemux2:
streaming stopped, reason not-negotiated) (usr/lib/pitivi/python/pitivi/utils/pipeline.py:555)